# voice

./: .gitignore  CLAUDE.md  LICENSE  README.md  install  package-lock.json  package.json  tsconfig.base.json
.claude/: settings.json
.claude/agents/: asr-benchmark-analyst.md  code-reviewer.md  linux-platform-engineer.md  security-auditor.md  ux-polish-reviewer.md
.claude/commands/: benchmark-asr.md  dependency-audit.md  package-linux.md  review.md  test-insertion.md  validate.md
.claude/rules/: dependency-policy.md  documentation.md  platform-desktop.md  product-quality.md  security.md  testing.md
.claude/skills/linux-integration-review/: SKILL.md
.claude/skills/packaging-readiness/: SKILL.md
.claude/skills/performance-review/: SKILL.md
.claude/skills/release-checklist/: SKILL.md
.claude/skills/security-review/: SKILL.md
.claude/skills/tray-shortcut-lifecycle-review/: SKILL.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: eslint.config.js  index.html  package.json
apps/desktop/src/: App.tsx  (+1 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: config.rs  insertion.rs  lib.rs  main.rs  transcribe.rs  tray.rs
docs/: install.md
docs/architecture/: README.md
docs/decisions/: README.md
docs/platform/: README.md
docs/security/: README.md
docs/testing/: README.md
scripts/: generate-icons.py  install.sh  package-appimage.sh  setup.sh
src/: middleware.ts
src/app/: layout.tsx
src/components/: AuthProvider.tsx  ModelPanel.tsx
src/types/: index.ts
(+19 files in other folders)
