[package]
name = "voice-dictation"
version = "0.1.0"
description = "Free Linux- and macOS-native voice dictation"
authors = ["Voice Dictation Contributors"]
edition = "2021"

[lib]
name = "voice_dictation_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "voice-dictation"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
