[package]
name = "voice"
version = "0.1.0"
description = "Free local-first voice dictation for Linux"
authors = ["Voice Contributors"]
edition = "2021"

[lib]
name = "voice_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "voice"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
whisper-rs = "0.14"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "2.0", features = ["v2_40"] }
glib = "0.18"
evdev = "0.12"
